[gd_scene load_steps=13 format=3 uid="uid://cs32y5seekr35"]

[ext_resource type="Texture2D" uid="uid://cqflg777urjia" path="res://graphics/player.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cgomy4fuiunf" path="res://scenes/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://67xw4fj1r4bm" path="res://graphics/particle.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://c15du7ghh0s2q" path="res://graphics/smoke.png" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://88j8s218110v" path="res://assets/sfx/laser_pew.wav" id="5_qlg0r"]
[ext_resource type="AudioStream" uid="uid://c6tns3xwc2cw8" path="res://assets/sfx/explosion-9-340460.mp3" id="6_tuyoq"]

[sub_resource type="Gradient" id="Gradient_dqkch"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qlg0r"]
gradient = SubResource("Gradient_dqkch")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tuyoq"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.8
color_ramp = SubResource("GradientTexture1D_qlg0r")

[sub_resource type="Gradient" id="Gradient_qlg0r"]
colors = PackedColorArray(1, 1, 1, 1, 0.66, 0.66, 0.66, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tuyoq"]
gradient = SubResource("Gradient_qlg0r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fjrip"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -50.0
linear_accel_max = -30.0
scale_min = 0.2
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_tuyoq")

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_g2els")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, 6, -5, 4, -4, 4, -4, 0, -3, 0, -3, -4, -2, -4, -2, -7, -1, -7, -1, -8, 0, -8, 1, -8, 1, -7, 2, -7, 2, -4, 3, -4, 3, 0, 4, 0, 4, 4, 5, 4, 5, 6, 6, 6, 6, 8, 3, 8, 3, 7, 1, 7, 1, 6, -1, 6, -1, 7, -3, 7, -3, 8, -6, 8, -6, 6)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3vyb7")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 6)
texture = ExtResource("3_qhqgy")
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_tuyoq")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
texture = ExtResource("4_dqkch")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_fjrip")

[node name="Cannon" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qlg0r")
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tuyoq")
volume_db = -5.0

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
